doc: fix extension desc

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Linxtractor",
   "version": "0.0.1",
   "manifest_version": 3,
-  "description": "Extract Youtube links from video description.",
+  "description": "Extract links from video description.",
 	"content_scripts": [
     {
 			"run_at": "document_idle",
